# internship_c_dataset_1

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: decision_tree.joblib  decision_tree_tune.joblib  gradient_boosting.joblib  gradient_boosting_smote.joblib  log_reg_1.joblib  log_reg_tune.joblib  random_forest.joblib  random_forest_smote.joblib  rf_reg_1.joblib  scaler.joblib  support_vector_machine.joblib  svm_reg_1.joblib  svm_reg_tune.joblib  tree_reg_1.joblib  y_train_smote.joblib
notebooks/: 1_baseline.ipynb  1_preprocess_data-Copy1.ipynb  1_preprocess_data.ipynb  2.1_baseline.ipynb  2.2_logistic_regression.ipynb  2.3_svm.ipynb  2.4_decision-tree.ipynb  2.5_random-forest.ipynb  2.6_gradient-boosting.ipynb  3_evaluation.ipynb
reports/figures/: CRIPS-DM flowchart.drawio.xml
src/cost_analysis/: calculate_loss.py
